# bgg

./: Makefile  Pipfile  README.md  ignore_requirements.txt  pyproject.toml  requirements.txt  setup.py
docs/: Makefile  conf.py  index.rst  make.bat
notebooks/: bgg_crawler.ipynb  bgg_eda.ipynb  bgg_script_testing_2024.ipynb  bgg_user_data.ipynb  bgg_weekly_crawler.ipynb  combine_data.ipynb  recommender_system.ipynb  request_log_in.ipynb  semantic_analysis.ipynb
src/async/: bgg_comment_crawler_async.py  bgg_comment_crawler_sync.py  bgg_comment_crawler_sync.py~  bgg_crawler_sync.py  bgg_game_crawler_async.py
src/bash_script/: bgg_game_info_test.py  run_crawler.sh  run_crawler.sh~  run_crawler2.sh~  run_crawler_test.sh
src/bga_crawler/: bga_game_crawler_async.py  bga_game_crawler_sync.py  bga_price_crawler_sync.py
src/bgg_crawler/: async_test.py  bgg_combine_info_rat.py  bgg_comments_ratings.py  bgg_game_info.py  bgg_pymongo_insert.py
src/data/: append_rankings.py  bgg_weekly_crawler.py  bgg_weekly_rankings.py  combine_weekly_data.py  email_confirmation.py  email_start.py  games_info.json  kickstarter_api.py  kickstater_api2.py
