[tool.poetry]
name = "bgg"
version = "0.1.0"
description = ""
authors = ["MichoelSnow <protect3f@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pip = "^22.2.2"
notebook = "^6.4.12"
numpy = "^1.23.2"
pandas = "^1.4.3"
beautifulsoup4 = "^4.11.1"
requests = "^2.28.1"
colorama = "^0.4.5"
Unidecode = "^1.3.4"
kaggle = "^1.5.12"
selenium = "^4.4.3"
black = "^22.6.0"
jupyter-contrib-nbextensions = "^0.5.1"
jupyter-nbextensions-configurator = "^0.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
